SVN revision.
----------------------------------------------------------------------
Tue Mar 13 14:35:50 2012                        Michael Jennings (mej)

Perform bitmask in property method rather than relying on callers.
----------------------------------------------------------------------
Tue Mar 13 15:49:01 2012                        Michael Jennings (mej)

Completed optimization work for MySQL.pm.
----------------------------------------------------------------------
Wed Mar 14 15:45:31 2012                        Michael Jennings (mej)

Cleanups and fixes to file handling, especially with respect to the
file permissions.  Feedback also requested on the confirmation
change.
----------------------------------------------------------------------
Sat Mar 17 21:13:56 2012                        Michael Jennings (mej)

Major refactoring of the File CLI.  Consolidated and cleaned up the
code, fixed a bug that prevented "new" from working, and redid the
interactive stuff to use a new Cli object method.

Also fixed a typo in the "node" help output.

This has been tested locally and seems to work, but changes this big
may have hidden issues, so please report any problems you encounter.
:-)
----------------------------------------------------------------------
Tue Mar 20 17:56:36 2012                        Michael Jennings (mej)

Cleaned up CLI help and added some short options to the file and node
commands.

Fixed bug with FQDN handling in CLI.

Refactored and cleaned up the object command.  Now subcommands are
used just like with file and node.  This means that "object -p :all"
is now "object print -p :all" etc.  Additionally, "object dump" is now
documented and "object print" can show subobjects (e.g., netdevs).
Object members are sorted intelligently.  "object new" is no longer
allowed.

Fixed a bug in Logger that prevented multiple arguments to the
*print() functions.
----------------------------------------------------------------------